Force vertical scrollbars to prevent content jumps

--- a/themes/musicdune/sass/components/_normalize.sass
+++ b/themes/musicdune/sass/components/_normalize.sass
@@ -59,16 +59,15 @@ audio:not([controls])
    ========================================================================== */
 
 /**
- * 1. Set default font family to sans-serif.
  * 2. Prevent iOS text size adjust after orientation change, without disabling
  *    user zoom.
  */
 
 html
-    font-family: sans-serif /* 1 */
     -webkit-text-size-adjust: 100% /* 2 */
     -ms-text-size-adjust: 100% /* 2 */
-
+    overflow-y: scroll
+    height: 100%
 
 /**
  * Remove default margin.
